# zapcode

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GAPS_FIX_PLAN.md  HARDENING_PLAN.md  KNOWN_GAPS.md  LICENSE  Makefile  README.md  SECURITY.md  STRESS-PASS-BUGS.md  TESTING.md  install.sh  release-please-config.json
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/baldrick-core/src/: lib.rs  snapshot.rs
crates/baldrick-core/tests/: async_await.rs  builtins.rs  classes.rs  generators.rs  snapshot.rs
crates/baldrick-js/: Cargo.toml  package.json
crates/baldrick-js/src/: lib.rs
crates/baldrick-py/: Cargo.toml
crates/baldrick-py/src/: lib.rs
crates/baldrick-wasm/: Cargo.toml
crates/baldrick-wasm/src/: lib.rs
crates/zapcode-core/: Cargo.toml
crates/zapcode-core/benches/: execution.rs
crates/zapcode-core/examples/: profile_density.rs  profile_dispatch.rs  profile_garbage.rs  profile_inrun.rs  profile_keys.rs  profile_pipeline.rs  profile_snapshot.rs
crates/zapcode-core/src/: error.rs  (+10 more)
crates/zapcode-js/: Cargo.toml  index.d.ts  index.js  package.json
crates/zapcode-py/: Cargo.toml  pyproject.toml
crates/zapcode-py/src/: lib.rs
crates/zapcode-wasm/: Cargo.toml
docs/: axes-roadmap.md  content-addressed-programs-design.md  generator-mainloop-design.md  in-run-memory-design.md  microtask-design.md
examples/ai-bedrock/: main.py  main.ts
examples/python/: README.md  ai_agent_anthropic.py  ai_agent_baldrick_ai.py  basic.py  pyproject.toml
examples/rust/: Cargo.toml
examples/typescript/: README.md  ai-agent-anthropic.ts  ai-agent-baldrick-ai.ts  ai-agent-vercel-ai.ts  ai-agent-zapcode-ai.ts  basic.ts  package.json
(+130 files in other folders)
